# ticktick-cli

./: .gitignore  AGENTS.md  README.md  SKILL.md  pyproject.toml  ticktick_cli.py
cli/: __init__.py  auth.py  config.py  constants.py  errors.py  mcp-tools.json  mcp.py  metadata.py  parser.py  tool_commands.py
tests/: test_ticktick_cli.py
