[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ticktick-cli"
version = "0.1.0"
description = "Small dependency-free CLI for TickTick MCP"
requires-python = ">=3.10"

[project.scripts]
ticktick = "ticktick_cli:main"

[tool.setuptools]
py-modules = ["ticktick_cli"]
packages = ["cli"]

[tool.setuptools.package-data]
cli = ["mcp-tools.json"]
